--- a/app/index.html
+++ b/app/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html class="no-js" lang="en">
   <head>
-    <title>Shenato</title>
-    <meta name="Description" content="A Personal Blog by Omar 'Shenato' ElGaml" />
+    <title>RGBA to HEXA converter</title>
+    <meta name="Description" content="Tool to convert RGBA to HEXA (8 digit HEX with alpha channel) by Omar 'Shenato' ElGaml" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <link rel="icon" href="/assets/ankh.svg" />
 
-    <meta property="og:title" content="Shenato's blog" />
-    <meta property="og:description" content="A Personal Blog by Omar 'Shenato' ElGaml" />
-    <meta property="og:site_name" content="Shenato" />
+    <meta property="og:title" content="RGBA to HEXA converter" />
+    <meta property="og:description" content="Tool to convert RGBA to HEXA (8 digit HEX with alpha channel) by Omar 'Shenato' ElGaml" />
+    <meta property="og:site_name" content="RGBA to transparency adjusted HEX (HEXA) converter" />
     <!-- <meta property="og:image" content="/assets/me.jpg" /> -->
-    <meta property="og:url" content="http://shenato.com" />
+    <meta property="og:url" content="http://rgbatohexa.shenato.com" />
     <meta property="og:type" content="website" />
 
     <meta name="msapplication-TileColor" content="rgb(0, 0, 0)" />
