--- a/app/index.html
+++ b/app/index.html
@@ -16,6 +16,11 @@
 
     <meta name="msapplication-TileColor" content="rgb(0, 0, 0)" />
     <meta name="theme-color" content="rgb(0, 0, 0)" />
+    <style>
+      body {
+        background: #282828FF;
+      }
+    </style>
   </head>
 
   <body>
