--- a/app/index.html
+++ b/app/index.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html class="no-js" lang="en">
   <head>
-    <title>RGBA to HEXA converter</title>
-    <meta name="Description" content="Tool to convert RGBA to HEXA (8 digit HEX with alpha channel) by Omar 'Shenato' ElGaml" />
+    <title>RGBA to transparent HEX code converter</title>
+    <meta name="description" content="Tool to convert RGBA to HEX value while maintaining transparency by Omar 'Shenato' ElGaml" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <link rel="icon" href="/assets/ankh.svg" />
 
     <meta property="og:title" content="RGBA to HEXA converter" />
-    <meta property="og:description" content="Tool to convert RGBA to HEXA (8 digit HEX with alpha channel) by Omar 'Shenato' ElGaml" />
-    <meta property="og:site_name" content="RGBA to transparency adjusted HEX (HEXA) converter" />
+    <meta property="og:description" content="Tool to convert RGBA to HEXA (8 digit HEX code with alpha channel) by Omar 'Shenato' ElGaml" />
+    <meta property="og:site_name" content="RGBA to transparency adjusted HEX code (HEXA) converter" />
     <!-- <meta property="og:image" content="/assets/me.jpg" /> -->
-    <meta property="og:url" content="http://rgbatohexa.shenato.com" />
+    <meta property="og:url" content="https://rgbatohexa.shenato.com" />
     <meta property="og:type" content="website" />
 
-    <meta name="msapplication-TileColor" content="rgb(0, 0, 0)" />
-    <meta name="theme-color" content="rgb(0, 0, 0)" />
+    <meta name="msapplication-TileColor" content="#282828FF" />
+    <meta name="theme-color" content="#282828FF" />
     <style>
       body {
         background: #282828FF;
