point to favicon in html

--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,7 @@
     <meta name="description" content="Tool to convert RGBA to HEX value while maintaining transparency by Omar 'Shenato' ElGaml" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <link rel="icon" href="/assets/ankh.svg" />
+    <link rel="icon" href="/assets/favicon.svg" />
 
     <meta property="og:title" content="RGBA to HEXA converter" />
     <meta property="og:description" content="Tool to convert RGBA to HEXA (8 digit HEX code with alpha channel) by Omar 'Shenato' ElGaml" />
